Add robots meta tag to prevent indexing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="robots" content="noindex, nofollow">
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Gaza Emergency — Feed a Child Now</title>
 <link rel="preconnect" href="https://js.stripe.com">
