--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div class="hero-top">
     <div class="hero-img" aria-hidden="true">
       <img id="heroPhoto"
-        src="YOUR-NEW-IMAGE.jpg"
+        src="https://i.postimg.cc/qvy6jDS5/Design-sem-nome-20251211-173552-0000.png"
         alt="children receiving food"/>
     </div>
 
